<resources>
    <string name="app_name">My Complaint</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="NewComp">File a new Complaint</string>
    <string name="Status">Track status of a complaint</string>
    <string name="txtLabel">Complaint Category</string>
    <string name="txt1">Complaint Category :</string>
    <string name="txt2">Date :</string>
    <string name="txtDate">Enter the Date</string>
    <string name="txt4">Complaint Description :</string>
    <string name="sbmtbtn">SUBMIT</string>
    <string name="txt5">Victim Name :</string>
    <string name="otherstxt">Others</string>
</resources>
